# book-recommender

./: .gitignore  Cargo.toml  book_metadata_1.yaml  book_metadata_422.yaml
.sqlx/: query-8df956b6df34b790dfd733e0100e172069a98c54cee0b47bf2d0a1824543ed9f.json
src/: book_db_handler.rs  book_metadata.rs  main.rs  models.rs
