[package]
name = "book-recommender"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = "0.16.1"
ort = {version = "2.0.0-rc.10", features = ["fetch-models"]}
oxrdfio = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"  # Add this line for YAML support
tokenizers = { version = "0.22.2", default-features = false, features = [ "onig" ] }
tracing-subscriber = {version = "0.3.22", default-features = false, features = ["env-filter", "fmt"]}


# ort = { path = "../../", features = [ "fetch-models" ] }
# ndarray = "0.17"
# tokenizers = { version = "0.19", default-features = false, features = [ "onig" ] }
# tracing-subscriber = { version = "0.3", default-features = false, features = [ "env-filter", "fmt" ] }
